[metadata]
name = hum_utils
version = 1.0.0
author = Brad Rittenhouse & Annie K. Lamar
author_email = bcritt@stanford.edu
description = Humanities Tools for Research Computing
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://gitlab.com/bcritt1/utility

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src